# LizardGraphics-2.0

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_shaders.py  main.cpp
DesktopExample/: CMakeLists.txt
DesktopExample/src/: main.cpp
LizardGraphics/: CMakeLists.txt  LApp.cpp  LApp.h  WindowProperties.h  pch.h
LizardGraphics/src/: LLogger.cpp  LLogger.h  LRenderer.cpp  LRenderer.h  LWindow.cpp  LWindow.h  Primitives.cpp  Primitives.h  Util.cpp  Util.h  globals.h  pch.h
LizardGraphics/src/shaders/: genericVert.vert  triangleVert.vert
src/: LCore.cpp  LCore.h  LLogger.h  LRenderer.cpp  LRenderer.h  LWindow.cpp  LWindow.h  Primitives.cpp  Primitives.h  main.cpp  pch.h
src/shaders/: genericFrag.frag  genericInstancedVert.vert  genericVert.vert
